--- a/examples/buttons/index.html
+++ b/examples/buttons/index.html
@@ -9,7 +9,7 @@
     </script>
   </head>
 <body>
-  <h2 id="addStyleSheet">addStyleSheet</h2>
+ <h2 id="addStyleSheet"><a href="#addStyleSheet">addStyleSheet</a></h2>
   <script id="script-addStyleSheet">
     window.addEventListener('DOMContentLoaded', (event) => {
       UI.widgets.addStyleSheet(document, 'https://linkeddata.github.io/tabulator-firefox/content/tabbedtab.css')
@@ -17,7 +17,7 @@
   </script>
   <pre id="viewSource-addStyleSheet"></pre><script>$('#viewSource-addStyleSheet').innerHTML = $('#script-addStyleSheet').innerText</script>
 
-  <h2 id="allClassURIs">allClassURIs</h2>
+ <h2 id="allClassURIs"><a href="#allClassURIs">allClassURIs</a></h2>
   <script id="script-allClassURIs">
     window.addEventListener('DOMContentLoaded', (event) => {
       UI.store.add(
@@ -43,7 +43,7 @@
 
   <ul id="ul-allClassURIs"></ul>
 
-  <h2 id="askName">askName</h2>
+ <h2 id="askName"><a href="#askName">askName</a></h2>
   <script id="script-askName">
     window.addEventListener('DOMContentLoaded', (event) => {
       const promise = UI.widgets.askName(document, UI.store, $('#div-askName'))
@@ -55,8 +55,9 @@
   <pre id="viewSource-askName"></pre><script>$('#viewSource-askName').innerHTML = $('#script-askName').innerText</script>
   <div id="div-askName"></div>
 
-  <h2 id="attachmentList">attachmentList</h2>
+ <h2 id="attachmentList"><a href="#attachmentList">attachmentList</a></h2>
   <script id="script-attachmentList">
+    // FIXME: https://github.com/solid/solid-ui/issues/212
     window.addEventListener('DOMContentLoaded', (event) => {
       UI.store.add(
         UI.rdf.namedNode('http://example.com/#some-message'),
@@ -69,7 +70,7 @@
   <pre id="viewSource-attachmentList"></pre><script>$('#viewSource-attachmentList').innerHTML = $('#script-attachmentList').innerText</script>
   <div id="div-attachmentList"></div>
 
-  <h2 id="button">button</h2>
+ <h2 id="button"><a href="#button">button</a></h2>
   <script id="script-button">
     window.addEventListener('DOMContentLoaded', (event) => {
       const solidLogo = 'https://solidproject.org/assets/img/solid-emblem.svg'
@@ -83,7 +84,7 @@
   <pre id="viewSource-button"></pre><script>$('#viewSource-button').innerHTML = $('#script-button').innerText</script>
   <div id="div-button"></div>
 
-  <h2 id="cancelButton">cancelButton</h2>
+ <h2 id="cancelButton"><a href="#cancelButton">cancelButton</a></h2>
   <script id="script-cancelButton">
     window.addEventListener('DOMContentLoaded', (event) => {
       $('#div-cancelButton').appendChild(
@@ -96,7 +97,7 @@
   <pre id="viewSource-cancelButton"></pre><script>$('#viewSource-cancelButton').innerHTML = $('#script-cancelButton').innerText</script>
   <div id="div-cancelButton"></div>
 
-  <h2 id="clearElement">clearElement</h2>
+ <h2 id="clearElement"><a href="#clearElement">clearElement</a></h2>
   <script id="script-clearElement">
     window.addEventListener('DOMContentLoaded', (event) => {
       let counter = 0
@@ -113,7 +114,7 @@
   <pre id="viewSource-clearElement"></pre><script>$('#viewSource-clearElement').innerHTML = $('#script-clearElement').innerText</script>
   <div id="div-clearElement" style="height: 2em;"></div>
 
-  <h2 id="complain">complain</h2>
+ <h2 id="complain"><a href="#complain">complain</a></h2>
   <script id="script-complain">
     window.addEventListener('DOMContentLoaded', (event) => {
       UI.widgets.complain({ div: $('#div-complain'), dom: document }, 'not good!')
@@ -122,7 +123,7 @@
   <pre id="viewSource-complain"></pre><script>$('#viewSource-complain').innerHTML = $('#script-complain').innerText</script>
   <div id="div-complain" style="height: 2em;"></div>
 
-  <h2 id="continueButton">continueButton</h2>
+ <h2 id="continueButton"><a href="#continueButton">continueButton</a></h2>
   <script id="script-continueButton">
     window.addEventListener('DOMContentLoaded', (event) => {
       $('#div-continueButton').appendChild(
@@ -133,7 +134,7 @@
   <pre id="viewSource-continueButton"></pre><script>$('#viewSource-continueButton').innerHTML = $('#script-continueButton').innerText</script>
   <div id="div-continueButton"></div>
 
-  <h2 id="defaultAnnotationStore">defaultAnnotationStore</h2>
+ <h2 id="defaultAnnotationStore"><a href="#defaultAnnotationStore">defaultAnnotationStore</a></h2>
     <script id="script-defaultAnnotationStore">
       window.addEventListener('DOMContentLoaded', (event) => {
         const url = 'http://example.com/a/b.html'
@@ -144,7 +145,7 @@
     <pre id="viewSource-defaultAnnotationStore"></pre><script>$('#viewSource-defaultAnnotationStore').innerHTML = $('#script-defaultAnnotationStore').innerText</script>
     <div id="div-defaultAnnotationStore"></div>
 
-  <h2 id="deleteButtonWithCheck">deleteButtonWithCheck</h2>
+ <h2 id="deleteButtonWithCheck"><a href="#deleteButtonWithCheck">deleteButtonWithCheck</a></h2>
   <script id="script-deleteButtonWithCheck">
     window.addEventListener('DOMContentLoaded', (event) => {
       const result = UI.widgets.deleteButtonWithCheck(
@@ -158,7 +159,7 @@
   <pre id="viewSource-deleteButtonWithCheck"></pre><script>$('#viewSource-deleteButtonWithCheck').innerHTML = $('#script-deleteButtonWithCheck').innerText</script>
   <div id="div-deleteButtonWithCheck"></div>
 
-  <h2 id="extractLogURI">extractLogURI</h2>
+ <h2 id="extractLogURI"><a href="#extractLogURI">extractLogURI</a></h2>
   <script id="script-extractLogURI">
     window.addEventListener('DOMContentLoaded', (event) => {
       const url = 'https://example.com/logFile=http%3A%2F%2Fexample.org%2Flogs.ttl&rulesFile=ttp%3A%2F%2Fexample.org%2Frules.ttl'
@@ -169,7 +170,7 @@
   <pre id="viewSource-extractLogURI"></pre><script>$('#viewSource-extractLogURI').innerHTML = $('#script-extractLogURI').innerText</script>
   <div id="div-extractLogURI"></div>
 
-  <h2 id="formatDateTime">formatDateTime</h2>
+ <h2 id="formatDateTime"><a href="#formatDateTime">formatDateTime</a></h2>
   <script id="script-formatDateTime">
     window.addEventListener('DOMContentLoaded', (event) => {
       const result = UI.widgets.formatDateTime(
@@ -182,7 +183,7 @@
   <pre id="viewSource-formatDateTime"></pre><script>$('#viewSource-formatDateTime').innerHTML = $('#script-formatDateTime').innerText</script>
   <div id="div-formatDateTime"></div>
 
-  <h2 id="faviconOrDefault">faviconOrDefault</h2>
+<h2 id="faviconOrDefault"><a href="#faviconOrDefault"><a href="#faviconOrDefault">faviconOrDefault</a></a></h2>
   <script id="script-faviconOrDefault">
     window.addEventListener('DOMContentLoaded', (event) => {
       const result = UI.widgets.faviconOrDefault(document, UI.rdf.namedNode('https://solidproject.org/'))
@@ -192,17 +193,19 @@
   <pre id="viewSource-faviconOrDefault"></pre><script>$('#viewSource-faviconOrDefault').innerHTML = $('#script-faviconOrDefault').innerText</script>
   <div id="div-faviconOrDefault"></div>
 
-  <h2 id="fileUploadButtonDiv">fileUploadButtonDiv</h2>
+<h2 id="fileUploadButtonDiv"><a href="#fileUploadButtonDiv"><a href="#fileUploadButtonDiv">fileUploadButtonDiv</a></a></h2>
   <script id="script-fileUploadButtonDiv">
     window.addEventListener('DOMContentLoaded', (event) => {
-      // const result = UI.widgets.fileUploadButtonDiv()
-      // $('#div-fileUploadButtonDiv').appendChild(document.createTextNode(result))
+      const result = UI.widgets.fileUploadButtonDiv(document, (files) => {
+        window.alert('uploaded! ' + files.length)
+      })
+      $('#div-fileUploadButtonDiv').appendChild(result)
     })
   </script>
   <pre id="viewSource-fileUploadButtonDiv"></pre><script>$('#viewSource-fileUploadButtonDiv').innerHTML = $('#script-fileUploadButtonDiv').innerText</script>
   <div id="div-fileUploadButtonDiv"></div>
 
-  <h2 id="findImage">findImage</h2>
+ <h2 id="findImage"><a href="#findImage">findImage</a></h2>
   <script id="script-findImage">
     window.addEventListener('DOMContentLoaded', (event) => {
       // const result = UI.widgets.findImage()
@@ -212,7 +215,7 @@
   <pre id="viewSource-findImage"></pre><script>$('#viewSource-findImage').innerHTML = $('#script-findImage').innerText</script>
   <div id="div-findImage"></div>
 
-  <h2 id="findImageFromURI">findImageFromURI</h2>
+ <h2 id="findImageFromURI"><a href="#findImageFromURI">findImageFromURI</a></h2>
   <script id="script-findImageFromURI">
     window.addEventListener('DOMContentLoaded', (event) => {
       // const result = UI.widgets.findImageFromURI()
@@ -222,7 +225,7 @@
   <pre id="viewSource-findImageFromURI"></pre><script>$('#viewSource-findImageFromURI').innerHTML = $('#script-findImageFromURI').innerText</script>
   <div id="div-findImageFromURI"></div>
 
-  <h2 id="iconForClass">iconForClass</h2>
+ <h2 id="iconForClass"><a href="#iconForClass">iconForClass</a></h2>
   <script id="script-iconForClass">
     window.addEventListener('DOMContentLoaded', (event) => {
       // const result = UI.widgets.iconForClass()
@@ -232,7 +235,7 @@
   <pre id="viewSource-iconForClass"></pre><script>$('#viewSource-iconForClass').innerHTML = $('#script-iconForClass').innerText</script>
   <div id="div-iconForClass"></div>
 
-  <h2 id="imagesOf">imagesOf</h2>
+ <h2 id="imagesOf"><a href="#imagesOf">imagesOf</a></h2>
   <script id="script-imagesOf">
     window.addEventListener('DOMContentLoaded', (event) => {
       // const result = UI.widgets.imagesOf()
@@ -242,7 +245,7 @@
   <pre id="viewSource-imagesOf"></pre><script>$('#viewSource-imagesOf').innerHTML = $('#script-imagesOf').innerText</script>
   <div id="div-imagesOf"></div>
 
-  <h2 id="index">index</h2>
+ <h2 id="index"><a href="#index">index</a></h2>
   <script id="script-index">
     window.addEventListener('DOMContentLoaded', (event) => {
       // const result = UI.widgets.index()
@@ -252,7 +255,7 @@
   <pre id="viewSource-index"></pre><script>$('#viewSource-index').innerHTML = $('#script-index').innerText</script>
   <div id="div-index"></div>
 
-  <h2 id="isAudio">isAudio</h2>
+ <h2 id="isAudio"><a href="#isAudio">isAudio</a></h2>
   <script id="script-isAudio">
     window.addEventListener('DOMContentLoaded', (event) => {
       // const result = UI.widgets.isAudio()
@@ -262,7 +265,7 @@
   <pre id="viewSource-isAudio"></pre><script>$('#viewSource-isAudio').innerHTML = $('#script-isAudio').innerText</script>
   <div id="div-isAudio"></div>
 
-  <h2 id="isImage">isImage</h2>
+ <h2 id="isImage"><a href="#isImage">isImage</a></h2>
   <script id="script-isImage">
     window.addEventListener('DOMContentLoaded', (event) => {
       // const result = UI.widgets.isImage()
@@ -272,7 +275,7 @@
   <pre id="viewSource-isImage"></pre><script>$('#viewSource-isImage').innerHTML = $('#script-isImage').innerText</script>
   <div id="div-isImage"></div>
 
-  <h2 id="isVideo">isVideo</h2>
+ <h2 id="isVideo"><a href="#isVideo">isVideo</a></h2>
   <script id="script-isVideo">
     window.addEventListener('DOMContentLoaded', (event) => {
       // const result = UI.widgets.isVideo()
@@ -282,7 +285,7 @@
   <pre id="viewSource-isVideo"></pre><script>$('#viewSource-isVideo').innerHTML = $('#script-isVideo').innerText</script>
   <div id="div-isVideo"></div>
 
-  <h2 id="linkButton">linkButton</h2>
+ <h2 id="linkButton"><a href="#linkButton">linkButton</a></h2>
   <script id="script-linkButton">
     window.addEventListener('DOMContentLoaded', (event) => {
       // const result = UI.widgets.linkButton()
@@ -292,7 +295,7 @@
   <pre id="viewSource-linkButton"></pre><script>$('#viewSource-linkButton').innerHTML = $('#script-linkButton').innerText</script>
   <div id="div-linkButton"></div>
 
-  <h2 id="linkIcon">linkIcon</h2>
+ <h2 id="linkIcon"><a href="#linkIcon">linkIcon</a></h2>
   <script id="script-linkIcon">
     window.addEventListener('DOMContentLoaded', (event) => {
       // const result = UI.widgets.linkIcon()
@@ -302,7 +305,7 @@
   <pre id="viewSource-linkIcon"></pre><script>$('#viewSource-linkIcon').innerHTML = $('#script-linkIcon').innerText</script>
   <div id="div-linkIcon"></div>
 
-  <h2 id="openHrefInOutlineMode">openHrefInOutlineMode</h2>
+ <h2 id="openHrefInOutlineMode"><a href="#openHrefInOutlineMode">openHrefInOutlineMode</a></h2>
   <script id="script-openHrefInOutlineMode">
     window.addEventListener('DOMContentLoaded', (event) => {
       // const result = UI.widgets.openHrefInOutlineMode()
@@ -312,7 +315,7 @@
   <pre id="viewSource-openHrefInOutlineMode"></pre><script>$('#viewSource-openHrefInOutlineMode').innerHTML = $('#script-openHrefInOutlineMode').innerText</script>
   <div id="div-openHrefInOutlineMode"></div>
 
-  <h2 id="personTR">personTR</h2>
+ <h2 id="personTR"><a href="#personTR">personTR</a></h2>
   <script id="script-personTR">
     window.addEventListener('DOMContentLoaded', (event) => {
       // const result = UI.widgets.personTR()
@@ -322,7 +325,7 @@
   <pre id="viewSource-personTR"></pre><script>$('#viewSource-personTR').innerHTML = $('#script-personTR').innerText</script>
   <div id="div-personTR"></div>
 
-  <h2 id="propertyTriage">propertyTriage</h2>
+ <h2 id="propertyTriage"><a href="#propertyTriage">propertyTriage</a></h2>
   <script id="script-propertyTriage">
     window.addEventListener('DOMContentLoaded', (event) => {
       // const result = UI.widgets.propertyTriage()
@@ -332,7 +335,7 @@
   <pre id="viewSource-propertyTriage"></pre><script>$('#viewSource-propertyTriage').innerHTML = $('#script-propertyTriage').innerText</script>
   <div id="div-propertyTriage"></div>
 
-  <h2 id="refreshTree">refreshTree</h2>
+ <h2 id="refreshTree"><a href="#refreshTree">refreshTree</a></h2>
   <script id="script-refreshTree">
     window.addEventListener('DOMContentLoaded', (event) => {
       // const result = UI.widgets.refreshTree()
@@ -342,7 +345,7 @@
   <pre id="viewSource-refreshTree"></pre><script>$('#viewSource-refreshTree').innerHTML = $('#script-refreshTree').innerText</script>
   <div id="div-refreshTree"></div>
 
-  <h2 id="removeButton">removeButton</h2>
+ <h2 id="removeButton"><a href="#removeButton">removeButton</a></h2>
   <script id="script-removeButton">
     window.addEventListener('DOMContentLoaded', (event) => {
       // const result = UI.widgets.removeButton()
@@ -352,7 +355,7 @@
   <pre id="viewSource-removeButton"></pre><script>$('#viewSource-removeButton').innerHTML = $('#script-removeButton').innerText</script>
   <div id="div-removeButton"></div>
 
-  <h2 id="shortDate">shortDate</h2>
+ <h2 id="shortDate"><a href="#shortDate">shortDate</a></h2>
   <script id="script-shortDate">
     window.addEventListener('DOMContentLoaded', (event) => {
       const result = UI.widgets.shortDate()
@@ -362,7 +365,7 @@
   <pre id="viewSource-shortDate"></pre><script>$('#viewSource-shortDate').innerHTML = $('#script-shortDate').innerText</script>
   <div id="div-shortDate"></div>
 
-  <h2 id="shortTime">shortTime</h2>
+ <h2 id="shortTime"><a href="#shortTime">shortTime</a></h2>
   <script id="script-shortTime">
     window.addEventListener('DOMContentLoaded', (event) => {
       const result = UI.widgets.shortTime()
@@ -372,7 +375,7 @@
   <pre id="viewSource-shortTime"></pre><script>$('#viewSource-shortTime').innerHTML = $('#script-shortTime').innerText</script>
   <div id="div-shortTime"></div>
 
-  <h2 id="selectorPanel">selectorPanel</h2>
+ <h2 id="selectorPanel"><a href="#selectorPanel">selectorPanel</a></h2>
   <script id="script-selectorPanel">
     window.addEventListener('DOMContentLoaded', (event) => {
       // const result = UI.widgets.selectorPanel()
@@ -382,7 +385,7 @@
   <pre id="viewSource-selectorPanel"></pre><script>$('#viewSource-selectorPanel').innerHTML = $('#script-selectorPanel').innerText</script>
   <div id="div-selectorPanel"></div>
 
-  <h2 id="selectorPanelRefresh">selectorPanelRefresh</h2>
+ <h2 id="selectorPanelRefresh"><a href="#selectorPanelRefresh">selectorPanelRefresh</a></h2>
   <script id="script-selectorPanelRefresh">
     window.addEventListener('DOMContentLoaded', (event) => {
       // const result = UI.widgets.selectorPanelRefresh()
@@ -392,7 +395,7 @@
   <pre id="viewSource-selectorPanelRefresh"></pre><script>$('#viewSource-selectorPanelRefresh').innerHTML = $('#script-selectorPanelRefresh').innerText</script>
   <div id="div-selectorPanelRefresh"></div>
 
-  <h2 id="setImage">setImage</h2>
+ <h2 id="setImage"><a href="#setImage">setImage</a></h2>
   <script id="script-setImage">
     window.addEventListener('DOMContentLoaded', (event) => {
       // const result = UI.widgets.setImage()
@@ -402,7 +405,7 @@
   <pre id="viewSource-setImage"></pre><script>$('#viewSource-setImage').innerHTML = $('#script-setImage').innerText</script>
   <div id="div-setImage"></div>
 
-  <h2 id="setName">setName</h2>
+ <h2 id="setName"><a href="#setName">setName</a></h2>
   <script id="script-setName">
     window.addEventListener('DOMContentLoaded', (event) => {
       // const result = UI.widgets.setName()
@@ -412,7 +415,7 @@
   <pre id="viewSource-setName"></pre><script>$('#viewSource-setName').innerHTML = $('#script-setName').innerText</script>
   <div id="div-setName"></div>
 
-  <h2 id="tempSite">tempSite</h2>
+ <h2 id="tempSite"><a href="#tempSite">tempSite</a></h2>
   <script id="script-tempSite">
     window.addEventListener('DOMContentLoaded', (event) => {
       // const result = UI.widgets.tempSite()
@@ -422,7 +425,7 @@
   <pre id="viewSource-tempSite"></pre><script>$('#viewSource-tempSite').innerHTML = $('#script-tempSite').innerText</script>
   <div id="div-tempSite"></div>
 
-  <h2 id="timestamp">timestamp</h2>
+ <h2 id="timestamp"><a href="#timestamp">timestamp</a></h2>
   <script id="script-timestamp">
     window.addEventListener('DOMContentLoaded', (event) => {
       const result = UI.widgets.timestamp()
